Update readme & add slime blocks for slowing down

--- a/src/main/resources/assets/fasterminecarts/lang/en_us.json
+++ b/src/main/resources/assets/fasterminecarts/lang/en_us.json
@@ -3,15 +3,15 @@
     "text.autoconfig.fasterminecarts.category.default": "General",
     "text.autoconfig.fasterminecarts.option.enableMod": "Enable Mod",
     "text.autoconfig.fasterminecarts.option.enableMod.@Tooltip": "Enable faster minecarts.",
-    "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDownBeforeCurvedRail": "Automatic Minecart Slowdown Before Curved Rail",
-    "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDownBeforeCurvedRail.@Tooltip": "Enable automatic slowdown before curved rail to prevent derailing.",
-    "text.autoconfig.fasterminecarts.option.manualMinecartSlowDownOnSoulSand": "Manual Minecart Slowdown On Soul Sand",
-    "text.autoconfig.fasterminecarts.option.manualMinecartSlowDownOnSoulSand.@Tooltip": "Enable manual slowdown on soul sand blocks.",
-    "text.autoconfig.fasterminecarts.option.furnaceMinecartSlowDownOnHopper": "Furnace Minecart Slowdown On Hopper",
-    "text.autoconfig.fasterminecarts.option.furnaceMinecartSlowDownOnHopper.@Tooltip": "Enable automatic slowdown for furnace minecarts on hoppers.",
+    "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown": "Automatic Slowdown",
+    "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown.@Tooltip": "Enable automatic slowdown to prevent derailing at corners.",
+    "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown": "Manual Slowdown",
+    "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown.@Tooltip": "Enable manual slowdown on soul sand blocks or slime blocks.",
+    "text.autoconfig.fasterminecarts.option.furnaceMinecartSlowDown": "Furnace Minecart Slowdown",
+    "text.autoconfig.fasterminecarts.option.furnaceMinecartSlowDown.@Tooltip": "Enable automatic slowdown for furnace minecarts on hoppers.",
     "text.autoconfig.fasterminecarts.option.maxSpeed": "Max Speed",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "Change the maximum speed (in meters per second).",
-    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "Vanilla, value is 8, default value is 24.",
+    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "Vanilla value is 8, default value is 24.",
     "block.fasterminecarts.acceleration_rail": "Acceleration Rail",
     "block.fasterminecarts.deceleration_rail": "Deceleration Rail"
 }
