Added zh_cn locale Changed furnace minecarts to hopper and chest minecarts... what were i doing

--- a/src/main/resources/assets/fasterminecarts/lang/en_us.json
+++ b/src/main/resources/assets/fasterminecarts/lang/en_us.json
@@ -7,8 +7,8 @@
     "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown.@Tooltip": "Enable automatic slowdown to prevent derailing at corners.",
     "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown": "Manual Slowdown",
     "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown.@Tooltip": "Enable manual slowdown on soul sand blocks or slime blocks.",
-    "text.autoconfig.fasterminecarts.option.furnaceMinecartSlowDown": "Furnace Minecart Slowdown",
-    "text.autoconfig.fasterminecarts.option.furnaceMinecartSlowDown.@Tooltip": "Enable automatic slowdown for furnace minecarts on hoppers.",
+    "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown": "Storage Minecart Slowdown",
+    "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown.@Tooltip": "Enable automatic slowdown for hopper and chest minecarts on hopper entities.",
     "text.autoconfig.fasterminecarts.option.maxSpeed": "Max Speed",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "Change the maximum speed (in meters per second).",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "Vanilla value is 8, default value is 24.",
