--- a/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
+++ b/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
@@ -10,7 +10,7 @@
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown": "运输矿车减速",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown.@Tooltip": "让运输矿车和漏斗矿车在漏斗上减速。",
     "text.autoconfig.fasterminecarts.option.maxSpeed": "最高速度",
-    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "调整最高速度 (米每秒)。",
+    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "调整最高可加速到的速度 (米每秒)。",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "原版值为8，默认值为24。",
     "block.fasterminecarts.acceleration_rail": "加速铁轨",
     "block.fasterminecarts.deceleration_rail": "减速铁轨"
