--- a/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
+++ b/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
@@ -1,4 +1,6 @@
 {
+    "modmenu.title.fasterminecarts": "极速矿车",
+    "modmenu.descriptionTranslation.fasterminecarts": "将矿车的速度加快。",
     "text.autoconfig.fasterminecarts.title": "极速矿车",
     "text.autoconfig.fasterminecarts.category.default": "通用",
     "text.autoconfig.fasterminecarts.option.enableMod": "启用极速矿车",
@@ -12,6 +14,7 @@
     "text.autoconfig.fasterminecarts.option.maxSpeed": "最高速度",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "调整最高可加速到的速度 (米每秒)。",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "原版值为8，默认值为24。",
-    "block.fasterminecarts.acceleration_rail": "加速铁轨",
-    "block.fasterminecarts.deceleration_rail": "减速铁轨"
+    "block.fasterminecarts.acceleration_rail": "加速轨道",
+    "block.fasterminecarts.deceleration_rail": "减速轨道"
+
 }
