Adds config for precise acc/dec rails

--- a/src/main/resources/assets/fasterminecarts/lang/en_us.json
+++ b/src/main/resources/assets/fasterminecarts/lang/en_us.json
@@ -2,7 +2,8 @@
     "modmenu.title.fasterminecarts": "Faster Minecarts",
     "modmenu.descriptionTranslation.fasterminecarts": "Increases the speed of minecarts.",
     "text.autoconfig.fasterminecarts.title": "Faster Minecarts",
-    "text.autoconfig.fasterminecarts.category.default": "General",
+    "text.autoconfig.fasterminecarts.category.general": "General",
+    "text.autoconfig.fasterminecarts.category.preciseControl": "Precise Control",
     "text.autoconfig.fasterminecarts.option.enableMod": "Enable Mod",
     "text.autoconfig.fasterminecarts.option.enableMod.@Tooltip": "Enable faster minecarts.",
     "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown": "Automatic Slowdown",
@@ -14,6 +15,19 @@
     "text.autoconfig.fasterminecarts.option.maxSpeed": "Max Speed",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "Change the maximum speed (in meters per second).",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "Vanilla value is 8, default value is 24.",
+    "text.autoconfig.fasterminecarts.option.preciseValueMode": "Precise Value Mode",
+    "text.autoconfig.fasterminecarts.option.preciseValueMode.@Tooltip[0]": "Enable to put precise control in value mode.",
+    "text.autoconfig.fasterminecarts.option.preciseValueMode.@Tooltip[1]": "Disable to put precise control in percentage mode.",
+    "text.autoconfig.fasterminecarts.option.preciseValueMode.@Tooltip[2]": "Maximum max speed will not exceed your max speed settings in General.",
+    "text.autoconfig.fasterminecarts.option.preciseValueMode.@Tooltip[3]": "Minimum max speed will not below vanilla value of 8 m/s.",
+    "text.autoconfig.fasterminecarts.option.preciseSpeedValue": "Precise Speed Value",
+    "text.autoconfig.fasterminecarts.option.preciseSpeedValue.@Tooltip[0]": "Sets precise speed value.",
+    "text.autoconfig.fasterminecarts.option.preciseSpeedValue.@Tooltip[1]": "Minecart gains or loses this specific value of maximum speed",
+    "text.autoconfig.fasterminecarts.option.preciseSpeedValue.@Tooltip[2]": "when passing a set of precise acceleration/deceleration rails.",
+    "text.autoconfig.fasterminecarts.option.preciseSpeedPercentage": "Precise Speed Percentage",
+    "text.autoconfig.fasterminecarts.option.preciseSpeedPercentage.@Tooltip[0]": "Sets precise speed percentage.",
+    "text.autoconfig.fasterminecarts.option.preciseSpeedPercentage.@Tooltip[1]": "Minecart gains or loses this specific value of maximum speed percentage",
+    "text.autoconfig.fasterminecarts.option.preciseSpeedPercentage.@Tooltip[2]": "when passing a set of precise acceleration/deceleration rails.",
     "block.fasterminecarts.acceleration_rail": "Acceleration Rail",
     "block.fasterminecarts.deceleration_rail": "Deceleration Rail",
     "block.fasterminecarts.precise_acceleration_rail": "Precise Acceleration Rail",
