--- a/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
+++ b/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
@@ -2,7 +2,8 @@
     "modmenu.title.fasterminecarts": "极速矿车",
     "modmenu.descriptionTranslation.fasterminecarts": "将矿车的速度加快。",
     "text.autoconfig.fasterminecarts.title": "极速矿车",
-    "text.autoconfig.fasterminecarts.category.default": "通用",
+    "text.autoconfig.fasterminecarts.category.general": "通用",
+    "text.autoconfig.fasterminecarts.category.preciseControl": "精确控制",
     "text.autoconfig.fasterminecarts.option.enableMod": "启用极速矿车",
     "text.autoconfig.fasterminecarts.option.enableMod.@Tooltip": "启用极速矿车模组。",
     "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown": "自动减速",
@@ -14,9 +15,21 @@
     "text.autoconfig.fasterminecarts.option.maxSpeed": "最高速度",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "调整最高可加速到的速度 (米每秒)。",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "原版值为8，默认值为24。",
+    "text.autoconfig.fasterminecarts.option.preciseValueMode": "精确速度值模式",
+    "text.autoconfig.fasterminecarts.option.preciseValueMode.@Tooltip[0]": "启用该选项让精确控制为速度值模式。",
+    "text.autoconfig.fasterminecarts.option.preciseValueMode.@Tooltip[1]": "禁用该选项让精确控制为速度百分比模式。",
+    "text.autoconfig.fasterminecarts.option.preciseValueMode.@Tooltip[2]": "最高速度的最大值不会超过通用设置中设置的速度最大值。",
+    "text.autoconfig.fasterminecarts.option.preciseValueMode.@Tooltip[3]": "最高速度的最小值不会比原版的8 m/s更小。",
+    "text.autoconfig.fasterminecarts.option.preciseSpeedValue": "精确速度值",
+    "text.autoconfig.fasterminecarts.option.preciseSpeedValue.@Tooltip[0]": "设置精确速度值。矿车经过一组(不是64个)加减速轨道时",
+    "text.autoconfig.fasterminecarts.option.preciseSpeedValue.@Tooltip[1]": "最高速度增加或减少该设置的值。",
+    "text.autoconfig.fasterminecarts.option.preciseSpeedValue.@Tooltip[2]": "",
+    "text.autoconfig.fasterminecarts.option.preciseSpeedPercentage": "精确速度百分比",
+    "text.autoconfig.fasterminecarts.option.preciseSpeedPercentage.@Tooltip[0]": "设置精确速度百分比。矿车经过一组(不是64个)加减速轨道时",
+    "text.autoconfig.fasterminecarts.option.preciseSpeedPercentage.@Tooltip[1]": "最高速度增加或减少该设置的百分比。",
+    "text.autoconfig.fasterminecarts.option.preciseSpeedPercentage.@Tooltip[2]": "",
     "block.fasterminecarts.acceleration_rail": "加速轨道",
     "block.fasterminecarts.deceleration_rail": "减速轨道",
     "block.fasterminecarts.precise_acceleration_rail": "精确加速轨道",
     "block.fasterminecarts.precise_deceleration_rail": "精确减速轨道"
-
 }
