--- a/src/main/resources/assets/fasterminecarts/lang/en_us.json
+++ b/src/main/resources/assets/fasterminecarts/lang/en_us.json
@@ -3,7 +3,7 @@
     "modmenu.descriptionTranslation.fasterminecarts": "Increases the speed of minecarts.",
     "text.autoconfig.fasterminecarts.title": "Faster Minecarts",
     "text.autoconfig.fasterminecarts.category.general": "General",
-    "text.autoconfig.fasterminecarts.category.preciseControl": "Precise Control",
+    "text.autoconfig.fasterminecarts.category.customControl": "Custom Control",
     "text.autoconfig.fasterminecarts.option.enableMod": "Enable Mod",
     "text.autoconfig.fasterminecarts.option.enableMod.@Tooltip": "Enable faster minecarts.",
     "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown": "Automatic Slowdown",
@@ -13,23 +13,16 @@
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown": "Storage Minecart Slowdown",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown.@Tooltip": "Enable automatic slowdown for hopper and chest minecarts on hopper entities.",
     "text.autoconfig.fasterminecarts.option.maxSpeed": "Max Speed",
-    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "Change the maximum speed (in meters per second).",
-    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "Vanilla value is 8, default value is 24.",
-    "text.autoconfig.fasterminecarts.option.preciseValueMode": "Precise Value Mode",
-    "text.autoconfig.fasterminecarts.option.preciseValueMode.@Tooltip[0]": "Enable to put precise control in value mode.",
-    "text.autoconfig.fasterminecarts.option.preciseValueMode.@Tooltip[1]": "Disable to put precise control in percentage mode.",
-    "text.autoconfig.fasterminecarts.option.preciseValueMode.@Tooltip[2]": "Maximum max speed will not exceed your max speed settings in General.",
-    "text.autoconfig.fasterminecarts.option.preciseValueMode.@Tooltip[3]": "Minimum max speed will not below vanilla value of 8 m/s.",
-    "text.autoconfig.fasterminecarts.option.preciseSpeedValue": "Precise Speed Value",
-    "text.autoconfig.fasterminecarts.option.preciseSpeedValue.@Tooltip[0]": "Sets precise speed value.",
-    "text.autoconfig.fasterminecarts.option.preciseSpeedValue.@Tooltip[1]": "Minecart gains or loses this specific value of maximum speed",
-    "text.autoconfig.fasterminecarts.option.preciseSpeedValue.@Tooltip[2]": "when passing a set of precise acceleration/deceleration rails.",
-    "text.autoconfig.fasterminecarts.option.preciseSpeedPercentage": "Precise Speed Percentage",
-    "text.autoconfig.fasterminecarts.option.preciseSpeedPercentage.@Tooltip[0]": "Sets precise speed percentage.",
-    "text.autoconfig.fasterminecarts.option.preciseSpeedPercentage.@Tooltip[1]": "Minecart gains or loses this specific value of maximum speed percentage",
-    "text.autoconfig.fasterminecarts.option.preciseSpeedPercentage.@Tooltip[2]": "when passing a set of precise acceleration/deceleration rails.",
+    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "Change the maximum speed of acceleration rail.",
+    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "Vanilla value is 8, default value is 24 (in meters per second).",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne": "Custom Speed 1",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "Change the maximum speed of custom speed rail 1 (in meters per second).",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "Vanilla value is 8, default value is 10 (in meters per second).",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo": "Custom Speed 2",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "Change the maximum speed of custom speed rail 2 (in meters per second).",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "Vanilla value is 8, default value is 15 (in meters per second).",
     "block.fasterminecarts.acceleration_rail": "Acceleration Rail",
     "block.fasterminecarts.deceleration_rail": "Deceleration Rail",
-    "block.fasterminecarts.precise_acceleration_rail": "Precise Acceleration Rail",
-    "block.fasterminecarts.precise_deceleration_rail": "Precise Deceleration Rail"
+    "block.fasterminecarts.custom_speed_rail_one": "Custom Speed Rail 1",
+    "block.fasterminecarts.custom_speed_rail_two": "Custom Speed Rail 2"
 }
