--- a/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
+++ b/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
@@ -13,8 +13,14 @@
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown": "运输矿车减速",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown.@Tooltip": "让运输矿车和漏斗矿车在漏斗上减速。",
     "text.autoconfig.fasterminecarts.option.maxSpeed": "最高速度",
-    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "调整最高可加速到的速度 (米每秒)。",
+    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "调整加速轨道最高可加速到的速度 (米每秒)。",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "原版值为8，默认值为24。",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne": "自定义速度 1",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "调整自定义速度轨道1可加速到的速度（米每秒）。",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo": "自定义速度 2",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "调整自定义速度轨道2可加速到的速度（米每秒）。",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "",
     "block.fasterminecarts.acceleration_rail": "加速轨道",
     "block.fasterminecarts.deceleration_rail": "减速轨道",
     "block.fasterminecarts.custom_speed_rail_one": "自定义速度轨道 1",
