--- a/src/main/resources/assets/fasterminecarts/lang/en_us.json
+++ b/src/main/resources/assets/fasterminecarts/lang/en_us.json
@@ -7,9 +7,14 @@
     "text.autoconfig.fasterminecarts.option.enableMod": "Enable Mod",
     "text.autoconfig.fasterminecarts.option.enableMod.@Tooltip": "Enable faster minecarts.",
     "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown": "Automatic Slowdown",
-    "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown.@Tooltip": "Enable automatic slowdown to prevent derailing at corners.",
+    "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown.@Tooltip": "Enable automatic slowdown to prevent derailing at corners and hills.",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance": "Slowdown Check Distance",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[0]": "The mod needs to check for corners and ascending rails in advance.",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[1]": "This setting controls an approximate distance for the check.",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[2]": "Higher values indicate earlier slowdown before corners and hills.",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[3]": "Note higher speeds probably require higher check distances, but this may impact server performance.",
     "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown": "Manual Slowdown",
-    "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown.@Tooltip": "Enable manual slowdown on soul sand blocks or slime blocks.",
+    "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown.@Tooltip": "Enable manual slowdown on soul sand blocks, slime blocks, and honey blocks.",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown": "Storage Minecart Slowdown",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown.@Tooltip": "Enable automatic slowdown for hopper and chest minecarts on hopper entities.",
     "text.autoconfig.fasterminecarts.option.maxSpeed": "Max Speed",
