--- a/src/main/resources/assets/fasterminecarts/lang/ja_jp.json
+++ b/src/main/resources/assets/fasterminecarts/lang/ja_jp.json
@@ -4,13 +4,17 @@
     "text.autoconfig.fasterminecarts.title": "Faster Minecarts",
     "text.autoconfig.fasterminecarts.category.general": "General",
     "text.autoconfig.fasterminecarts.category.customControl": "カスタム制御",
-    "text.autoconfig.fasterminecarts.category.preciseControl": "正確な制御",
     "text.autoconfig.fasterminecarts.option.enableMod": "Modを有効にする",
     "text.autoconfig.fasterminecarts.option.enableMod.@Tooltip": "Faster Minecarts を有効にする。",
     "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown": "自動で減速",
-    "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown.@Tooltip": "コーナーでの脱線を防ぐために自動で減速するようになります。",
+    "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown.@Tooltip": "コーナーでの脱線を防ぐために自動で減速するようになります。(Update: and hills)",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance": "Slowdown Check Distance",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[0]": "The mod needs to check for corners and ascending rails in advance.",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[1]": "This setting controls an approximate distance for the check.",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[2]": "Higher values indicate earlier slowdown before corners and hills.",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[3]": "Note higher speeds probably require higher check distances, but this may impact server performance.",
     "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown": "手動で減速",
-    "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown.@Tooltip": "ソウルサンドブロックまたはスライムブロックで減速するようになります。",
+    "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown.@Tooltip": "ソウルサンドブロックまたはスライムブロックで減速するようになります。(Update: and honey blocks)",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown": "ストレージ系トロッコの減速",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown.@Tooltip": "ホッパー上のホッパートロッコもしくはチェストトロッコが自動で減速するようになります。",
     "text.autoconfig.fasterminecarts.option.maxSpeed": "最大速度",
@@ -24,8 +28,6 @@
     "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "Vanilla value is 8, default value is 15 (in meters per second).",
     "block.fasterminecarts.acceleration_rail": "加速レール",
     "block.fasterminecarts.deceleration_rail": "減速レール",
-    "block.fasterminecarts.precise_acceleration_rail": "精確な加速レール",
-    "block.fasterminecarts.precise_deceleration_rail": "精確な減速レール",
     "block.fasterminecarts.custom_speed_rail_one": "カスタム速度レール1",
     "block.fasterminecarts.custom_speed_rail_two": "カスタム速度レール2"
 }
