--- a/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
+++ b/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
@@ -7,9 +7,14 @@
     "text.autoconfig.fasterminecarts.option.enableMod": "启用极速矿车",
     "text.autoconfig.fasterminecarts.option.enableMod.@Tooltip": "启用极速矿车模组。",
     "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown": "自动减速",
-    "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown.@Tooltip": "自动减速防止矿车在拐弯处脱轨。",
+    "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown.@Tooltip": "自动减速防止矿车在拐弯处和上坡处脱轨。",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance": "减速检查距离",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[0]": "模组需要在拐弯和上坡之前提前将矿车减速，提前的距离由该选项大致确定。",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[1]": "更高的检查距离会导致矿车更早减速。",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[2]": "需要注意的是更高的矿车速度通常需要更高的检查距离，但是太高的检查距离可能会影响服务器性能。",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[3]": "",
     "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown": "手动减速",
-    "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown.@Tooltip": "在轨道下方放置灵魂沙或黏液块来手动减速。",
+    "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown.@Tooltip": "在轨道下方放置灵魂沙，黏液块或蜂蜜块来手动减速。",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown": "运输矿车减速",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown.@Tooltip": "让运输矿车和漏斗矿车在漏斗上减速。",
     "text.autoconfig.fasterminecarts.option.maxSpeed": "最高速度",
