Update texture and recipe

--- a/src/main/resources/assets/fasterminecarts/lang/en_us.json
+++ b/src/main/resources/assets/fasterminecarts/lang/en_us.json
@@ -10,7 +10,7 @@
     "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown.@Tooltip": "Enable automatic slowdown to prevent derailing at corners and hills.",
     "text.autoconfig.fasterminecarts.option.slowdownCheckDistance": "Slowdown Check Distance",
     "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[0]": "The mod needs to check for corners and ascending rails in advance.",
-    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[1]": "This setting controls an approximate distance for the check.",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[1]": "This setting controls the approximate distance for the check.",
     "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[2]": "Higher values indicate earlier slowdown before corners and hills.",
     "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[3]": "Note higher speeds probably require higher check distances, but this may impact server performance.",
     "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown": "Manual Slowdown",
@@ -22,10 +22,10 @@
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "Vanilla value is 8, default value is 24 (in meters per second).",
     "text.autoconfig.fasterminecarts.option.customSpeedOne": "Custom Speed 1",
     "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "Change the maximum speed of custom speed rail 1.",
-    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "Vanilla value is 8, default value is 10 (in meters per second).",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "Vanilla value is 8, default value is 15 (in meters per second).",
     "text.autoconfig.fasterminecarts.option.customSpeedTwo": "Custom Speed 2",
     "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "Change the maximum speed of custom speed rail 2.",
-    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "Vanilla value is 8, default value is 15 (in meters per second).",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "Vanilla value is 8, default value is 20 (in meters per second).",
     "block.fasterminecarts.acceleration_rail": "Acceleration Rail",
     "block.fasterminecarts.deceleration_rail": "Deceleration Rail",
     "block.fasterminecarts.custom_speed_rail_one": "Custom Speed Rail 1",
