--- a/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
+++ b/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
@@ -7,25 +7,25 @@
     "text.autoconfig.fasterminecarts.option.enableMod": "启用极速矿车",
     "text.autoconfig.fasterminecarts.option.enableMod.@Tooltip": "启用极速矿车模组。",
     "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown": "自动减速",
-    "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown.@Tooltip": "自动减速防止矿车在拐弯处和上坡处脱轨。",
-    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance": "减速检查距离",
-    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[0]": "模组需要在拐弯和上坡之前提前将矿车减速，提前的距离由该选项大致确定。",
-    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[1]": "更高的检查距离会导致矿车更早减速。",
-    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[2]": "需要注意的是更高的矿车速度通常需要更高的检查距离，但是太高的检查距离可能会影响服务器性能。",
+    "text.autoconfig.fasterminecarts.option.automaticMinecartSlowDown.@Tooltip": "防止矿车在拐弯处和上坡处脱轨。",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance": "减速距离",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[0]": "拐弯和上坡之前需要提前将矿车减速，提前的距离由该选项大致确定。",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[1]": "更高的减速距离会让矿车更早减速。",
+    "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[2]": "需要注意的是更高的矿车速度通常需要更高的减速距离，但是太高的减速距离可能会影响服务器性能。",
     "text.autoconfig.fasterminecarts.option.slowdownCheckDistance.@Tooltip[3]": "",
     "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown": "手动减速",
     "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown.@Tooltip": "在轨道下方放置灵魂沙，黏液块或蜂蜜块来手动减速。",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown": "运输矿车减速",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown.@Tooltip": "让运输矿车和漏斗矿车在漏斗上减速。",
     "text.autoconfig.fasterminecarts.option.maxSpeed": "最高速度",
-    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "调整加速轨道最高可加速到的速度 (米每秒)。",
-    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "原版值为8，默认值为24。",
+    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "调整加速轨道最高可加速到的速度。",
+    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "原版值为8，默认值为24 (米每秒)。",
     "text.autoconfig.fasterminecarts.option.customSpeedOne": "自定义速度 1",
-    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "调整自定义速度轨道1可加速到的速度（米每秒）。",
-    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "调整自定义速度轨道1可加速到的速度。",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "原版值为8，默认值为15 (米每秒)。",
     "text.autoconfig.fasterminecarts.option.customSpeedTwo": "自定义速度 2",
-    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "调整自定义速度轨道2可加速到的速度（米每秒）。",
-    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "调整自定义速度轨道2可加速到的速度。",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "原版值为8，默认值为20 (米每秒)。",
     "block.fasterminecarts.acceleration_rail": "加速轨道",
     "block.fasterminecarts.deceleration_rail": "减速轨道",
     "block.fasterminecarts.custom_speed_rail_one": "自定义速度轨道 1",
