--- a/src/main/resources/assets/fasterminecarts/lang/en_us.json
+++ b/src/main/resources/assets/fasterminecarts/lang/en_us.json
@@ -19,17 +19,17 @@
     "text.autoconfig.fasterminecarts.option.manualMinecartSlowDown.@Tooltip": "Enable manual slowdown on soul sand blocks, slime blocks, and honey blocks.",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown": "Storage Minecart Slowdown",
     "text.autoconfig.fasterminecarts.option.storageMinecartSlowDown.@Tooltip": "Enable automatic slowdown for hopper and chest minecarts on hopper entities.",
-    "text.autoconfig.fasterminecarts.option.maxSpeed": "Max Speed",
-    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "Change the maximum speed of acceleration rail.",
+    "text.autoconfig.fasterminecarts.option.maxSpeed": "Maximum Speed",
+    "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "Change the maximum speed set by acceleration rails.",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "Vanilla value is 8, default value is 24 (in meters per second).",
-    "text.autoconfig.fasterminecarts.option.customSpeedOne": "Custom Speed 1",
-    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "Change the maximum speed of custom speed rail 1.",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne": "Lapis Lazuli Rail Speed",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "Change the maximum speed set by lapis lazuli rails.",
     "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "Vanilla value is 8, default value is 15 (in meters per second).",
     "text.autoconfig.fasterminecarts.option.customSpeedTwo": "Custom Speed 2",
-    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "Change the maximum speed of custom speed rail 2.",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "Change the maximum speed set by copper rails.",
     "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "Vanilla value is 8, default value is 20 (in meters per second).",
     "block.fasterminecarts.acceleration_rail": "Acceleration Rail",
     "block.fasterminecarts.deceleration_rail": "Deceleration Rail",
-    "block.fasterminecarts.custom_speed_rail_one": "Custom Speed Rail 1",
-    "block.fasterminecarts.custom_speed_rail_two": "Custom Speed Rail 2"
+    "block.fasterminecarts.custom_speed_rail_one": "Lapis Lazuli Rail",
+    "block.fasterminecarts.custom_speed_rail_two": "Copper Rail"
 }
