--- a/src/main/resources/assets/fasterminecarts/lang/ja_jp.json
+++ b/src/main/resources/assets/fasterminecarts/lang/ja_jp.json
@@ -23,11 +23,11 @@
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[0]": "最大速度を変更します（メートル/秒単位）。",
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "バニラは8、デフォルトは24です。",
     "text.autoconfig.fasterminecarts.option.customSpeedOne": "Lapis Lazuli Rail Speed",
-    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "Change the maximum speed of custom speed rail 1.",
-    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "Vanilla value is 8, default value is 15 (in meters per second).",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "Change the maximum speed set by lapis lazuli rails.",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "There's no upper limit on the maximum speed. Use at your own risk.",
     "text.autoconfig.fasterminecarts.option.customSpeedTwo": "Copper Rail Speed",
-    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "Change the maximum speed of custom speed rail 2.",
-    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "Vanilla value is 8, default value is 20 (in meters per second).",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "Change the maximum speed set by copper rails.",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "There's no upper limit on the maximum speed. Use at your own risk.",
     "block.fasterminecarts.acceleration_rail": "加速レール",
     "block.fasterminecarts.deceleration_rail": "減速レール",
     "block.fasterminecarts.custom_speed_rail_one": "Lapis Lazuli Rail",
