--- a/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
+++ b/src/main/resources/assets/fasterminecarts/lang/zh_cn.json
@@ -24,10 +24,10 @@
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "原版值为8，默认值为24 (米每秒)。",
     "text.autoconfig.fasterminecarts.option.customSpeedOne": "青金石轨道速度",
     "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "调整青金石轨道可加速到的速度。",
-    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "原版值为8，默认值为15 (米每秒)。",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "最高速度无上限，谨慎使用。",
     "text.autoconfig.fasterminecarts.option.customSpeedTwo": "铜轨道速度",
     "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "调整铜轨道可加速到的速度。",
-    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "原版值为8，默认值为20 (米每秒)。",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "最高速度无上限，谨慎使用。",
     "block.fasterminecarts.acceleration_rail": "加速轨道",
     "block.fasterminecarts.deceleration_rail": "减速轨道",
     "block.fasterminecarts.custom_speed_rail_one": "青金石轨道",
