--- a/src/main/resources/assets/fasterminecarts/lang/en_us.json
+++ b/src/main/resources/assets/fasterminecarts/lang/en_us.json
@@ -24,10 +24,10 @@
     "text.autoconfig.fasterminecarts.option.maxSpeed.@Tooltip[1]": "Vanilla value is 8, default value is 24 (in meters per second).",
     "text.autoconfig.fasterminecarts.option.customSpeedOne": "Lapis Lazuli Rail Speed",
     "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[0]": "Change the maximum speed set by lapis lazuli rails.",
-    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "Vanilla value is 8, default value is 15 (in meters per second).",
+    "text.autoconfig.fasterminecarts.option.customSpeedOne.@Tooltip[1]": "There's no upper limit on the maximum speed. Use at your own risk.",
     "text.autoconfig.fasterminecarts.option.customSpeedTwo": "Copper Rail Speed",
     "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[0]": "Change the maximum speed set by copper rails.",
-    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "Vanilla value is 8, default value is 20 (in meters per second).",
+    "text.autoconfig.fasterminecarts.option.customSpeedTwo.@Tooltip[1]": "There's no upper limit on the maximum speed. Use at your own risk.",
     "block.fasterminecarts.acceleration_rail": "Acceleration Rail",
     "block.fasterminecarts.deceleration_rail": "Deceleration Rail",
     "block.fasterminecarts.custom_speed_rail_one": "Lapis Lazuli Rail",
